[gd_scene load_steps=68 format=2]

[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00018.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00027.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00025.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00000.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00007.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00005.png" type="Texture" id=6]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00021.png" type="Texture" id=7]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00002.png" type="Texture" id=8]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00016.png" type="Texture" id=9]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00024.png" type="Texture" id=10]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00020.png" type="Texture" id=11]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00001.png" type="Texture" id=12]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00019.png" type="Texture" id=13]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00013.png" type="Texture" id=14]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00029.png" type="Texture" id=15]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00022.png" type="Texture" id=16]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00011.png" type="Texture" id=17]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00008.png" type="Texture" id=18]
[ext_resource path="res://Slime.gd" type="Script" id=19]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00017.png" type="Texture" id=20]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00023.png" type="Texture" id=21]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00006.png" type="Texture" id=22]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00015.png" type="Texture" id=23]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00004.png" type="Texture" id=24]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00010.png" type="Texture" id=25]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00003.png" type="Texture" id=26]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00014.png" type="Texture" id=27]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00028.png" type="Texture" id=28]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00012.png" type="Texture" id=29]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00009.png" type="Texture" id=30]
[ext_resource path="res://Enemy/Slimes/SlimeGreen/SlimeBasic_00026.png" type="Texture" id=31]

[sub_resource type="CanvasItemMaterial" id=45]

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 26 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 30 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 29 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 376, 256 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "Slime",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 108, 11.7474 )

[sub_resource type="Animation" id=14]
resource_name = "Walk"

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 176.889, 29.5 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 183.111, 25.7778 )

[node name="Slime" type="KinematicBody2D"]
position = Vector2( -79, -52 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 45 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 8 )
animation = "Slime"
frame = 1
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.66667, 114.828 )
scale = Vector2( 2, 2 )
shape = SubResource( 9 )
one_way_collision = true

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2( -2.66667, 7.33334 )
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 14 )

[node name="TopCheck" type="Area2D" parent="."]
position = Vector2( 0.666668, 11.3333 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCheck"]
position = Vector2( 0.666664, -191.667 )
scale = Vector2( 1.5, 2 )
shape = SubResource( 15 )

[node name="SideCheck" type="Area2D" parent="."]
scale = Vector2( 1.5, 1.5 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideCheck"]
position = Vector2( -1.33333, 16.8889 )
scale = Vector2( 1, 1.5 )
shape = SubResource( 47 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="TopCheck" to="." method="_on_TopCheck_body_entered"]
[connection signal="body_entered" from="SideCheck" to="." method="_on_SideCheck_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
